Fix wrapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ h1 {
 
 .nav li {
   display: inline;
+  white-space: nowrap;
 }
 
 .nav a {
